[package]
name = "battop"
version = "0.3.0"
authors = ["svartalf <self@svartalf.info>", "w568w <w568w at outlook.com>"]
edition = "2018"
description = "Interactive batteries viewer"
homepage = "https://github.com/w568w/battop"
repository = "https://github.com/w568w/battop"
readme = "README.md"
categories = ["os"]
keywords = ["tui", "battery", "linux", "macos"]
license = "Apache-2.0 OR MIT"
exclude = ["assets"]

[dependencies]
starship-battery = "*"
structopt = { version = "*", default-features = false }
log = "*"
stderrlog = "*"
ratatui = { version = "*"}
crossterm = "*"
itertools = "*"
humantime = "2"
